--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   multipart_request: ^0.3.1
   html_editor: ^1.0.1
   lazy_load_scrollview: ^1.1.0
+  maps_launcher: ^1.2.2+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
